WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161819
Fix failing mediasource-play.html and mediasource-config-change-mp4-v-bitrate.html tests
https://bugs.webkit.org/show_bug.cgi?id=161819
Summary
Fix failing mediasource-play.html and mediasource-config-change-mp4-v-bitrate...
Jer Noble
Reported
2016-09-09 15:32:12 PDT
Fix failing mediasource-play.html and mediasource-sourcebuffer-mode.html tests
Attachments
Patch
(14.05 KB, patch)
2016-09-12 09:43 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(745.57 KB, application/zip)
2016-09-12 10:39 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(966.72 KB, application/zip)
2016-09-12 10:45 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-yosemite
(1.39 MB, application/zip)
2016-09-12 10:46 PDT
,
Build Bot
no flags
Details
Patch
(15.85 KB, patch)
2016-09-12 11:30 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-09-12 09:43:22 PDT
Created
attachment 288572
[details]
Patch
WebKit Commit Bot
Comment 2
2016-09-12 09:45:18 PDT
Attachment 288572
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/mediasource/SampleMap.h:47: const_reverse_iterator is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/Modules/mediasource/SampleMap.h:80: const_reverse_iterator is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3
2016-09-12 10:39:12 PDT
Comment on
attachment 288572
[details]
Patch
Attachment 288572
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2060102
New failing tests: media/media-source/media-source-end-of-stream-readyState.html imported/w3c/web-platform-tests/media-source/mediasource-sourcebuffer-mode.html
Build Bot
Comment 4
2016-09-12 10:39:15 PDT
Created
attachment 288580
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-09-12 10:45:23 PDT
Comment on
attachment 288572
[details]
Patch
Attachment 288572
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2060107
New failing tests: media/media-source/media-source-end-of-stream-readyState.html imported/w3c/web-platform-tests/media-source/mediasource-sourcebuffer-mode.html
Build Bot
Comment 6
2016-09-12 10:45:27 PDT
Created
attachment 288582
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-09-12 10:46:14 PDT
Comment on
attachment 288572
[details]
Patch
Attachment 288572
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2060106
New failing tests: media/media-source/media-source-end-of-stream-readyState.html imported/w3c/web-platform-tests/media-source/mediasource-sourcebuffer-mode.html
Build Bot
Comment 8
2016-09-12 10:46:18 PDT
Created
attachment 288583
[details]
Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Jer Noble
Comment 9
2016-09-12 11:30:27 PDT
Created
attachment 288591
[details]
Patch
WebKit Commit Bot
Comment 10
2016-09-12 11:33:06 PDT
Attachment 288591
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/mediasource/SampleMap.h:47: const_reverse_iterator is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/Modules/mediasource/SampleMap.h:80: const_reverse_iterator is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 11
2016-09-12 14:11:21 PDT
Comment on
attachment 288591
[details]
Patch Clearing flags on attachment: 288591 Committed
r205820
: <
http://trac.webkit.org/changeset/205820
>
WebKit Commit Bot
Comment 12
2016-09-12 14:11:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug